@@ -1,7 +1,11 @@
-package org.sos.pillsoo.config;
+package org.sos.pillsoo.auth.config;
 
+import org.sos.pillsoo.auth.jwt.JWTUtil;
+import org.sos.pillsoo.auth.jwt.filter.CustomLogoutFilter;
+import org.sos.pillsoo.auth.jwt.filter.JWTFilter;
+import org.sos.pillsoo.auth.jwt.filter.LoginFilter;
+import org.sos.pillsoo.auth.jwt.filter.RefreshTokenFilter;
 import org.sos.pillsoo.auth.repository.RefreshRepository;
-import org.sos.pillsoo.jwt.*;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -18,6 +22,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -72,10 +77,10 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
+        configuration.setAllowedOrigins(List.of("http://localhost:3000"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
         configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
-        configuration.setExposedHeaders(Arrays.asList("Authorization"));
+        configuration.setExposedHeaders(List.of("Authorization"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
